@@ -1,5 +1,5 @@
 bin_PROGRAMS = datalog
-lib_LIBRARIES = libdatalog.a
+lib_LTLIBRARIES = libdatalog.la
 include_HEADERS = datalog.h
 info_TEXINFOS = datalog.texi
 pkgdata_DATA = datalog.lua datalog.html
@@ -11,11 +11,12 @@ if NO_LUA
   LOCAL_LIBLUA = lua/liblua.a
 endif
 
-libdatalog_a_SOURCES = datalog.h loader.c datalog.c
+libdatalog_la_SOURCES = datalog.h loader.c datalog.c
+libdatalog_la_LDFLAGS = -version-info 0:0:0
 
 datalog_SOURCES = interp.c
-datalog_LDADD = libdatalog.a $(LOCAL_LIBLUA)
-datalog_DEPENDENCIES = libdatalog.a $(LOCAL_LIBLUA)
+datalog_LDADD = libdatalog.la $(LOCAL_LIBLUA)
+datalog_DEPENDENCIES = libdatalog.la $(LOCAL_LIBLUA)
 
 BUILT_SOURCES = dl_lua.h
 
